--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+  <body>
+    <!-- the entire body must be written by student -->
+    <div class="flex">
+      <img
+        src="https://m.media-amazon.com/images/M/MV5BNmQ0ODBhMjUtNDRhOC00MGQzLTk5MTAtZDliODg5NmU5MjZhXkEyXkFqcGdeQXVyNDUyOTg3Njg@._V1_QL75_UY562_CR1,0,380,562_.jpg"
+        alt="Harry Potter and the Sorcerer's Stone poster"
+      />
+      <p>
+        An orphaned boy enrolls in a school of wizardry, where he learns the
+        truth about himself, his family and the terrible evil that haunts the
+        magical world.
+      </p>
+    </div>
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
