--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
   <body>
     <!-- the entire body must be written by student -->
     <div class="flex">
-      <img
+      <img class="poster"
         src="https://m.media-amazon.com/images/M/MV5BNmQ0ODBhMjUtNDRhOC00MGQzLTk5MTAtZDliODg5NmU5MjZhXkEyXkFqcGdeQXVyNDUyOTg3Njg@._V1_QL75_UY562_CR1,0,380,562_.jpg"
         alt="Harry Potter and the Sorcerer's Stone poster"
       />
-      <p>
+      <p class="description">
         An orphaned boy enrolls in a school of wizardry, where he learns the
         truth about himself, his family and the terrible evil that haunts the
         magical world.
